Working on architecture for V/VM relationship.
Also playing with adding a custom TextBox control to handle the required
styles for validation. Devs would then only have to specify validation
rules for the TextBox.

--- a/Apollo/Apollo.View.csproj
+++ b/Apollo/Apollo.View.csproj
@@ -59,7 +59,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Controls\CreateRaceControl.xaml">
+    <Page Include="Controls\ValidationTextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CreateRaceView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -67,13 +71,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="ApolloUserControl.cs" />
+    <Compile Include="ApolloViewBase.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Controls\CreateRaceControl.xaml.cs">
-      <DependentUpon>CreateRaceControl.xaml</DependentUpon>
+    <Compile Include="Controls\ValidationTextBox.xaml.cs">
+      <DependentUpon>ValidationTextBox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreateRaceView.xaml.cs">
+      <DependentUpon>CreateRaceView.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
